--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"mongoose": "^5.11.15",
 		"cors": "^2.8.5"
 	},
 	"repository": {
