--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
 		"mongoose": "^5.11.15",
